<resources>
    <string name="app_name">Momento</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="AppTitle">Momento</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="log_out">log out</string>
    <string name="app_icon">app icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered_sign_up">Not registered? Sign up</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="already_registered_sign_in">Already registered? Sign in</string>
    <string name="upload_an_image">upload an image</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="next">Next</string>
    <string name="app_title_description">App Title</string>
    <string name="life_expectancy">Life expectancy</string>
    <string name="null_value">...</string>
    <string name="days_left">Days left</string>
    <string name="percentage">%</string>
    <string name="death_day">Death Day</string>
    <string name="profile_picture">profile picture</string>
    <string name="user_name">user name</string>
    <string name="email_placeholder">user@email.com</string>
</resources>